# matrix-filler

./: .gitignore  README.md  example.ipynb  pyproject.toml
matrix_filler/: __init__.py  filler.py
